# AI_Powered_IT_Asset_Request_Manager

./: .gitignore  requirements.txt
IT_asset_manager/: .env  .gitignore  alembic.ini  create_table.py  generate_secret_key.py  main.py  pyproject.toml
IT_asset_manager/alembic/: env.py
IT_asset_manager/alembic/versions/: 0fb3d6731312_add_employees_table.py  10966085ec4c_added_more_employees.py  4c9935b845bd_added_more_employees.py  c857668c5221_describe_your_changes.py  e425d75e400d_add_password_column_to_employee_table.py
IT_asset_manager/backend/: chatbot_graph.py  crud.py  database.py  models.py  security.py
IT_asset_manager/backend/routes/: auth.py  chatbot.py
IT_asset_manager/backend/scripts/: add_assets.py  add_employees.py
IT_asset_manager/frontend/: chatbot.html  index.html
app/: chatbot.py  main.py  workflow.py
