[tool.poetry]
name = "it-asset-manager"
version = "0.1.0"
description = ""
authors = ["srush1608 <srushti.talwekar@coditas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
langchain = "^0.3.13"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
bcrypt = "^4.2.1"
jwt = "^1.3.1"
langchain-groq = "^0.2.2"
langgraph = "^0.2.60"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
